# MicroBitcoin

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  libmicroconsensus.pc.in
doc/man/: Makefile.am  micro-cli.1  micro-qt.1  micro-tx.1  micro-util.1  micro-wallet.1  microd.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  attributes.h  banman.h  base58.cpp  base58.h  bech32.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_write.cpp  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  (+86 more)
src/bench/: .gitignore  bench.h  ccoins_caching.cpp  coin_selection.cpp  data.h  rpc_blockchain.cpp  verify_script.cpp
src/bench/data/: block413567.raw
src/compat/: assumptions.h  byteswap.h  cpuid.h  endian.h  glibc_compat.cpp  sanity.h  stdin.cpp  stdin.h
src/consensus/: merkle.h  params.h  tx_check.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  chacha_poly_aead.h  common.h  hkdf_sha256_32.h  muhash.h  poly1305.h  sha256.cpp  sha3.h  sha512.h  siphash.h
src/crypto/ctaes/: README.md
src/crypto/yespower/: yespower.c
src/index/: base.h  blockfilterindex.h  coinstatsindex.h  disktxpos.h  txindex.cpp
src/init/: common.cpp  common.h  micro-node.cpp  microd.cpp
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  node.h  wallet.h
src/ipc/: exception.h  process.h  protocol.h
src/ipc/capnp/: init-types.h  protocol.h
src/leveldb/util/: env_posix.cc
src/logging/: timer.h
src/node/: blockstorage.cpp  blockstorage.h  coin.h  coinstats.h  context.h  interfaces.cpp  psbt.h  transaction.h  ui_interface.h  utxo_snapshot.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  packages.h  policy.h  rbf.h  settings.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoingui.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  micro.cpp  micro.h  micro.qrc  micro_locale.qrc  microaddressvalidator.cpp  microaddressvalidator.h  microamountfield.cpp  microamountfield.h  microgui.cpp  microgui.h  (+65 more)
src/qt/android/: AndroidManifest.xml
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: micro_am.ts  micro_ar.ts  micro_az.ts  micro_be.ts  micro_bg.ts  micro_bs.ts  micro_ca.ts  micro_cs.ts  micro_cy.ts  micro_da.ts  micro_de.ts  micro_el.ts  micro_en.ts  micro_en.xlf  micro_eo.ts  micro_es.ts  micro_es_CL.ts  micro_es_CO.ts  micro_es_DO.ts  micro_es_MX.ts  micro_es_VE.ts  micro_et.ts  micro_eu.ts  micro_fa.ts  micro_fi.ts  micro_fil.ts  micro_fr.ts  micro_ga.ts  micro_gd.ts  micro_gl.ts  micro_gl_ES.ts  micro_gu.ts  micro_he.ts  micro_hr.ts  micro_hu.ts  micro_id.ts  micro_is.ts  micro_it.ts  micro_ja.ts  micro_ka.ts  (+50 more)
src/qt/res/: micro-qt-res.rc
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  external_signer.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  net.h  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.h  util.cpp  util.h
src/script/: descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  microconsensus.cpp  microconsensus.h  script.cpp  script.h  script_error.h  sigcache.h  sign.h  signingprovider.h  standard.cpp  standard.h
src/secp256k1/: README.md  SECURITY.md  libsecp256k1.pc.in
src/support/: cleanse.h  httplib.h  lockedpool.cpp  lockedpool.h
src/test/: Makefile  README.md  amount_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  bloom_tests.cpp  compress_tests.cpp  crypto_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  interfaces_tests.cpp  key_tests.cpp  main.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  net_tests.cpp  netbase_tests.cpp  pow_tests.cpp  rpc_tests.cpp  script_tests.cpp  scriptnum10.h  settings_tests.cpp  system_tests.cpp  txindex_tests.cpp  txvalidationcache_tests.cpp  util_tests.cpp  util_threadnames_tests.cpp  validation_block_tests.cpp  validationinterface_tests.cpp
src/univalue/: README.md
src/util/: asmap.h  bip32.h  bytevectorhash.h  check.h  epochguard.h  error.h  fees.h  getuniquepath.h  golombrice.h  hash_type.h  hasher.h  macros.h  message.cpp  message.h  moneystr.cpp  moneystr.h  rbf.h  readwritefile.h  serfloat.h  settings.h  sock.h  spanparsing.h  strencodings.h  string.h  system.cpp  system.h  thread.h  threadnames.cpp  threadnames.h  time.cpp  time.h  tokenpipe.cpp  tokenpipe.h  trace.h  translation.h  ui_change_type.h  url.h  vector.h
src/wallet/: bdb.cpp  bdb.h  coincontrol.h  coinselection.h  context.h  crypter.h  db.cpp  db.h  dump.cpp  dump.h  external_signer_scriptpubkeyman.cpp  external_signer_scriptpubkeyman.h  feebumper.h  fees.h  ismine.h  load.h  receive.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  salvage.h  scriptpubkeyman.h  spend.cpp  spend.h  sqlite.cpp  sqlite.h  transaction.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  wallettool.h  walletutil.h
src/zmq/: zmqabstractnotifier.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqutil.h
(+496 files in other folders)
