dist_man1_MANS=

if BUILD_MICROD
  dist_man1_MANS+=microd.1
endif

if ENABLE_QT
  dist_man1_MANS+=micro-qt.1
endif

if BUILD_MICRO_CLI
  dist_man1_MANS+=micro-cli.1
endif

if BUILD_MICRO_TX
  dist_man1_MANS+=micro-tx.1
endif

if BUILD_MICRO_UTIL
  dist_man1_MANS+=micro-util.1
endif

if ENABLE_WALLET
if BUILD_MICRO_WALLET
  dist_man1_MANS+=micro-wallet.1
endif
endif
